redux refactor v1.3 overflow-x comment fixed + get mapped

--- a/src/index.css
+++ b/src/index.css
@@ -193,6 +193,7 @@ a {
   padding: 10px;
   border-radius: 10px;
   background-color: #f5f5f5;
+  overflow-x: auto;
 }
 
 .detail-page__comments-attributes {
